// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fn > error > fn(' ') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

╠══════════════════════════════════════════════════╣ THEN THROWS PARSEERROR
ParseError: (string <-> (Param (Encoded side) <-> Param))
└─ Transformation process failure
   └─ You must specify at least one name for your flag.
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > error > fn('') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

╠══════════════════════════════════════════════════╣ THEN THROWS PARSEERROR
ParseError: (string <-> (Param (Encoded side) <-> Param))
└─ Transformation process failure
   └─ You must specify at least one name for your flag.
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > error > fn('--foo --foo') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
--foo --foo
╠══════════════════════════════════════════════════╣ THEN THROWS PARSEERROR
ParseError: (string <-> (Param (Encoded side) <-> Param))
└─ Transformation process failure
   └─ Duplicate alias: "foo"
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > error > fn('--v') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
--v
╠══════════════════════════════════════════════════╣ THEN THROWS PARSEERROR
ParseError: (string <-> (Param (Encoded side) <-> Param))
└─ Transformation process failure
   └─ Long flag must be two or more characters: '--v'
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > error > fn('-v -v') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-v -v
╠══════════════════════════════════════════════════╣ THEN THROWS PARSEERROR
ParseError: (string <-> (Param (Encoded side) <-> Param))
└─ Transformation process failure
   └─ Duplicate alias: "v"
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > error > fn('-vv') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-vv
╠══════════════════════════════════════════════════╣ THEN THROWS PARSEERROR
ParseError: (string <-> (Param (Encoded side) <-> Param))
└─ Transformation process failure
   └─ Short flag must be exactly one character: '-vv'
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > success > fn('--foo-bar') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
--foo-bar
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
Param {
  canonical: 'fooBar',
  short: null,
  long: 'fooBar',
  aliases: {
    short: [],
    long: []
  },
  expression: '--foo-bar'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > success > fn('--verbose') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
--verbose
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
Param {
  canonical: 'verbose',
  short: null,
  long: 'verbose',
  aliases: {
    short: [],
    long: []
  },
  expression: '--verbose'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > success > fn('-v --verbose -x --extra') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-v --verbose -x --extra
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
Param {
  canonical: 'verbose',
  short: 'v',
  long: 'verbose',
  aliases: {
    short: [ 'x' ],
    long: [ 'extra' ]
  },
  expression: '-v --verbose -x --extra'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > success > fn('-v --verbose') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-v --verbose
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
Param {
  canonical: 'verbose',
  short: 'v',
  long: 'verbose',
  aliases: {
    short: [],
    long: []
  },
  expression: '-v --verbose'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > success > fn('-v') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-v
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
Param {
  canonical: 'v',
  short: 'v',
  long: null,
  aliases: {
    short: [],
    long: []
  },
  expression: '-v'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`fn > success > fn('v verbose x extra') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
v verbose x extra
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
Param {
  canonical: 'verbose',
  short: 'v',
  long: 'verbose',
  aliases: {
    short: [ 'x' ],
    long: [ 'extra' ]
  },
  expression: 'v verbose x extra'
}
╚══════════════════════════════════════════════════╝"
`;
